# distributed

./: LICENCE.md  README.md
lista1/: .gitignore  README.md  client.cpp  main.cpp  meson.BUILD  meson.build  server.cpp
lista1/demo/src/: main.cpp
lista1/filesystem/: meson.build
lista1/filesystem/inc/: filesystem.hpp
lista1/filesystem/src/: filesystem.cpp
lista1/rpc/: meson.build
lista1/rpc/inc/: client.hpp  marshaling.hpp  marshalling.hpp  protocol.hpp  rpc.hpp  schema.hpp  server.hpp  udp.hpp
lista1/rpc/src/: client.cpp  marshaling.cpp  marshalling.cpp  server.cpp  udp.cpp
lista1/rpc/test/: marshalling.cpp
lista1/zad1/: .clang-format  README.md  meson.build
lista1/zad1/demo/: meson.build
lista1/zad1/rpc/: meson.build
lista1/zad2/: chat.proto  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  client.py  server.py
lista2/zad1/: .gitignore  go.mod  todo.txt
lista2/zad1/master/: main.go  workerPool.go
lista2/zad1/worker/: worker.go
lista2/zad2/: settings.gradle
lista2/zad2/hadoop/: Dockerfile
lista2/zad2/matrixMult/: Dockerfile  MatrixMult.java
lista2/zad2/matrixMult.java/: Dockerfile  InvertedIndex.java  MatrixMult.java
lista2/zad2/matrixVector/: Dockerfile  MatrixVector.java
lista2/zad2/weather/: Dockerfile  Weather.java
lista2/zad2/wordcount/: Dockerfile
lista3/: channel.py  enhanced_main.py  main.py  main_zad1.py  main_zad2.py  process.py  snapshot.py  visualization.py
lista3/zad1/: protocol.md
lista4/zad1/: go.mod  go.sum
lista4/zad2/: go.mod  localBalancer.go  main.go  node.go  uuid.proto  uuid_spec.MD
(+445 files in other folders)
